--- a/billing.html
+++ b/billing.html
@@ -136,6 +136,7 @@ currency: <select ng-model="currency"id="currency">
             </tr>
         </table>
     </table>
+    <button onclick="window.print()">PRINT THE BILL</button>
 </form>
 <div class="page">
     <div class="top">
